--- a/apps/auth-service/project.json
+++ b/apps/auth-service/project.json
@@ -1,44 +1,72 @@
 {
-  "name": "auth-service",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/auth-service/src",
-  "projectType": "application",
-  "tags": [],
-  "targets": {
-    "build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
-      },
-      "configurations": {
-        "development": {
-          "args": ["node-env=development"]
-        }
-      }
-    },
-    "serve": {
-      "continuous": true,
-      "executor": "@nx/js:node",
-      "defaultConfiguration": "development",
-      "dependsOn": ["build"],
-      "options": {
-        "buildTarget": "auth-service:build",
-        "runBuildTargetDependencies": false
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "auth-service:build:development"
-        },
-        "production": {
-          "buildTarget": "auth-service:build:production"
-        }
-      }
-    },
-    "test": {
-      "options": {
-        "passWithNoTests": true
-      }
-    }
-  }
+	"name": "auth-service",
+	"$schema": "../../node_modules/nx/schemas/project-schema.json",
+	"sourceRoot": "apps/auth-service/src",
+	"projectType": "application",
+	"tags": [],
+	"targets": {
+		"build": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "webpack-cli build",
+				"args": ["node-env=production"]
+			},
+			"configurations": {
+				"development": {
+					"args": ["node-env=development"]
+				}
+			}
+		},
+		"serve": {
+			"continuous": true,
+			"executor": "@nx/js:node",
+			"defaultConfiguration": "development",
+			"dependsOn": ["build"],
+			"options": {
+				"buildTarget": "auth-service:build",
+				"runBuildTargetDependencies": false
+			},
+			"configurations": {
+				"development": {
+					"buildTarget": "auth-service:build:development"
+				},
+				"production": {
+					"buildTarget": "auth-service:build:production"
+				}
+			}
+		},
+		"test": {
+			"options": {
+				"passWithNoTests": true
+			}
+		},
+		"lint": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "biome lint ./apps/auth-service",
+				"cwd": "./"
+			}
+		},
+		"lint:fix": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "biome check --write ./apps/auth-service",
+				"cwd": "./"
+			}
+		},
+		"format:check": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "biome format --check ./apps/auth-service",
+				"cwd": "./"
+			}
+		},
+		"format:write": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "biome format --write ./apps/auth-service",
+				"cwd": "./"
+			}
+		}
+	}
 }
