--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/jest": "21.1.2",
